--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="icon" href="https://bcw.blob.core.windows.net/public/img/9977764104160066">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="assets/style/main.css">
   <link rel="stylesheet" href="assets/style/style.css">
@@ -16,19 +19,57 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-dark navbar-expand bg-dark text-light no-select">
-      <a class="navbar-brand ms-3" href="#">
-        <img src="https://codeworks.blob.core.windows.net/public/assets/img/cw-mark.png" height="45" alt=""
-          loading="lazy">
-        <span class="ms-2">latefall21-papaMicksPizza</span>
+    <nav class="navbar navbar-primary navbar-expand bg-primary text-light no-select">
+      <a class="navbar-brand text-center" href="#">
+        <h1 class="site-font ml-2 text-center pizza-text">Papa Mick's Pizza!</h1>
       </a>
     </nav>
   </header>
   <main>
-    <div class="container-fluid">
-      <div class="row">
+    <div class="container">
+      <form class="row align-items-end" onsubmit="app.pizzasController.createPizza()">
+        <div class="col-3">
+          <label for="" class="form-label">Pizza Name</label>
+          <input type="text" class="form-control" name="name" id="" aria-describedby="helpId" placeholder="">
+        </div>
+        <div class="col-3">
+          <label for="" class="form-label">Crust</label>
+          <input type="text" class="form-control" name="crust" id="" aria-describedby="helpId" placeholder="">
+        </div>
+        <div class="col-3">
+          <label for="" class="form-label">Sauce</label>
+          <input type="text" class="form-control" name="sauce" id="" aria-describedby="helpId" placeholder="">
+        </div>
+        <div class="col-3"><button class="btn btn-primary  w-100 p-2">order pizza</button></div>
+      </form>
+      <div class="row align-items-end">
         <div class="col-12">
-          <div id="app"></div>
+          <div id="pizzas" class="row mt-5 justify-content-around">
+            <!-- PIZZA TEMPLATE -->
+            <!-- <div class="col-3 bg-light shadow rounded">
+              <div class="row">
+                <div class="col-12 bg-primary p-5"> Pizza Name </div>
+                <div class="col-12 p-4">
+                  <b>Pie Fixings</b>
+                  <div class="row  bg-light darken-20  shadow-inset">
+                    <div class="col-12">topping</div>
+                    <div class="col-12">topping</div>
+                  </div>
+                </div>
+                <div class="col-12 p-4 ">
+                  <b>Toppings</b>
+                  <div class="row  bg-light darken-20  shadow-inset">
+                    <div class="col-12">topping</div>
+                    <div class="col-12">topping</div>
+                    <div class="col-12">topping</div>
+                    <div class="col-12">topping</div>
+                  </div>
+                </div>
+                <div class="col-12 text-end">Total: $47.95</div>
+              </div>
+            </div> -->
+            <!-- PIZZA TEMPLATE -->
+          </div>
         </div>
       </div>
     </div>
